deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-hello-app-deployment
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: acme-hello-app  
  template:
    metadata:
      labels:
        app: acme-hello-app
    spec:
      containers:
      - name: acme-hello-app
        image: us-docker.pkg.dev/cloudrun/container/hello:latest  
        ports:
        - containerPort: 8080
