service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-hello-app-service
spec:
  selector:
    app: acme-hello-app
  ports:
  - protocol: TCP
    port: 80  
    targetPort: 8080  
  type: LoadBalancer 
  externalTrafficPolicy: Local
